--- a/style.css
+++ b/style.css
@@ -18,9 +18,20 @@ body{
 }
 header{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 50px 15px 15px;
+}
+header h1{
+    font-weight: medium;
+    color: #fff;
+    font-size: 40px;
+}
+header p{
+    font-weight: medium;
+    color: #fff;
+    font-size: 16px;
 }
 header input::placeholder{
     color: #161616;
@@ -31,7 +42,7 @@ header input {
     padding:10px 15px;
     border: none;
     outline: none;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 16px 0px 16px 0px;
     border-bottom: 3px solid rgba(0,0,0,0.65);
