--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     height: 100vh;
     text-align: center;
     justify-content: center;
+    overflow: hidden;
 }
 .app-wrap{
     display: flex;
@@ -104,6 +105,46 @@ main{
     font-size: 24px;
     font-weight: 500;
     text-shadow: 0px 4px rgba(0,0,0,0.4);
+}
+
+#made{
+    position: absolute;
+    right: 2.5%;
+    bottom: 2.5%;
+    font-size:1vw;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 900;
+    color: white;
+    background: transparent;
+    padding: 10px;
+    padding-bottom: 15px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border:2px solid white;
+}
+#madeby{
+    position: absolute;
+    left: 2.5%;
+    bottom: 12.5%;
+    font-size:1vw;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 900;
+    color: white;
+    
+    background: transparent;
+    padding: 10px;
+    padding-bottom: 15px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+    border:2px solid white;
+}
+#made a, #madeby a{
+    font-family: 'Roboto Mono', monospace;
+    color: white;
+    text-decoration: none;
+    border-bottom: 1px solid white;
 }
 @media(max-width:1040px){
     body{
